add: for donate page, icons, images

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div style="text-align: center; margin-top: 50px;">
-                    <button class="btn btn-rounded btn-dark">Feed a friend now</button>
+                    <button class="btn btn-rounded btn-dark" onclick="window.location.href='pages/donate/index.html'">Feed a friend now</button>
                 </div>
             </div>
         </section>
