--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -40,201 +40,150 @@
         </div>
     </header>
     <main>
-      <div class="panda-block"></div>
-      <section id="pickfeed-block">
-          <div class="pickfeed-text">
-              <h3>THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h3>
-              <p>Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational programs and public and private events cancelled or postponed for additional months. We need you now more than ever to help ensure that we overcome these challenges. We have been actively raising funds in the community, and we are grateful for the generosity. But much more support is still needed, and we need your help! Please consider a gift today – no matter what size – to help us sustain our mission.</p>
-              <h3 class="orange">Donation Information</h3>
-          </div>
-          <div class="pickfeed-payment">
-              <div class="pickfeed-payment-text">
-                  <h2>Pick and feed a friend</h2>
-                  <p>We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
-              </div>
-              <div class="pickfeed-payment-diet">
-                <div class="diet-days">
-                  <p id="days">4</p>
-                  <p>Panda diet for the day.</p>
-                </div>
-                <div class="x-icon">
-                  <img src="../../assets/icons/cross.svg" alt="x icon">
-                </div>
-                <div class="panda-logo">
-                  <img src="../../assets/icons/panda-transparent.png" alt="panda logo">
-                </div>
-              </div>
-              <div class="amount">
-                  <p>Amount</p>
+        <section class="section1-bg" style="height: 390px;">
+        </section>
 
-              </div >
-              <div class="pickfeed-payment-bar">
-                  
-                <div class="grey-line">
-                  <div class="yellow-circle" data-amount="5000" onclick="choose('5000')">
-                    <div class="dot-circles hidden">
-                      <div class="circle outer">
-                          <div class="circle inner"></div>
-                      </div>
-                      </div>
-                  </div>
-                  <div class="yellow-circle" data-amount="2000" onclick="choose('2000')">
-                    <div class="dot-circles hidden">
-                      <div class="circle outer">
-                          <div class="circle inner"></div>
-                      </div>
-                      </div>
-                  </div>
-                  <div class="yellow-circle" data-amount="1000" onclick="choose('1000')">
-                    <div class="dot-circles">
-                      <div class="circle outer">
-                          <div class="circle inner"></div>
-                      </div>
-                      </div>
-                  </div>
-                  <div class="yellow-circle" data-amount="500" onclick="choose('500')">
-                    <div class="dot-circles hidden">
-                      <div class="circle outer">
-                          <div class="circle inner"></div>
-                      </div>
-                      </div>
-                  </div>
-                  <div class="yellow-circle" data-amount="250" onclick="choose('250')">
-                    <div class="dot-circles hidden">
-                      <div class="circle outer">
-                          <div class="circle inner"></div>
-                      </div>
-                      </div>
-                  </div>
-                  <div class="yellow-circle" data-amount="100" onclick="choose('100')">
-                    <div class="dot-circles hidden">
-                      <div class="circle outer">
-                          <div class="circle inner"></div>
-                      </div>
-                      </div>
-                  </div>
-                  <div class="yellow-circle" data-amount="50" onclick="choose('50')">
-                    <div class="dot-circles hidden">
-                      <div class="circle outer">
-                          <div class="circle inner"></div>
-                      </div>
-                      </div>
-                  </div>
-                  <div class="yellow-circle" data-amount="25" onclick="choose('25')">
-                    <div class="dot-circles hidden">
-                      <div class="circle outer">
-                          <div class="circle inner"></div>
-                      </div>
-                      </div>
-                  </div>
+        <section class="container">
+            <div class="content">
+                <h3 style="font-size: 33px;">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h3>
+                <p>Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational
+                    programs and public and private events cancelled or postponed for additional months. We need you now
+                    more than ever to help ensure that we overcome these challenges. We have been actively raising funds
+                    in the community, and we are grateful for the generosity. But much more support is still needed, and
+                    we need your help! Please consider a gift today – no matter what size – to help us sustain our
+                    mission.</p>
+            </div>
+            <h3>Donation Information</h3>
+            <div class="pick-container">
+                <div class="wrapper">
+                    <h2>Pick and feed a friend</h2>
+                    <h4 class="subtitle">We know the animals bring you joy, and in these extraordinary times, we're
+                        glad.</h4>
+                    <div class="panda-widget">
+                        <div style="text-align: center; margin-top: 54px;">
+                            <div class="amt-of-days">
+                                <p class="no-of-pandas">4</p>
+                            </div>
+                            <p>Panda diet for the day.</p>
+                        </div>
+                        <img src="../../assets/icons/x_icon.svg" alt="x icon" class="x-icon">
+                        <img src="../../assets/icons/panda_widget1.svg" alt="A big panda Icon">
+                    </div>
+                    <p>Amount</p>
+                    <form class="form">
+                        <div class="progress-bar">
+                            <div class="progress-bg">
+                                <div class="line"></div>
+                                <div class="donate-amount-container">
+                                    <div class="donate-box">
+                                        <input class="rollers-icon" type="radio" id="5000" name="money" value="5000">
+                                        <label class="left" for="5000"><span>$</span>5000</label>
+                                    </div>
+                                    <div class="donate-box">
+                                        <input class="rollers-icon" type="radio" id="2000" name="money" value="2000">
+                                        <label class="left" for="2000"><span>$</span>2000</label>
+                                    </div>
+                                    <div class="donate-box">
+                                        <input class="rollers-icon" type="radio" id="1000" checked name="money"
+                                            value="1000">
+                                        <label class="active" for="1000"><span>$</span>1000</label>
+                                    </div>
+                                    <div class="donate-box">
+                                        <input class="rollers-icon" type="radio" id="500" name="money" value="500">
+                                        <label class="" for="500"><span>$</span>500</label>
+                                    </div>
+                                    <div class="donate-box">
+                                        <input class="rollers-icon" type="radio" id="250" name="money" value="250">
+                                        <label class="" for="250"><span>$</span>250</label>
+                                    </div>
+                                    <div class="donate-box">
+                                        <input class="rollers-icon" type="radio" id="100" name="money" value="100">
+                                        <label class="" for="100"><span>$</span>100</label>
+                                    </div>
+                                    <div class="donate-box">
+                                        <input class="rollers-icon" type="radio" id="50" name="money" value="50">
+                                        <label class="" for="50"><span>$</span>50</label>
+                                    </div>
+                                    <div class="donate-box">
+                                        <input class="rollers-icon" type="radio" id="25" name="money" value="25">
+                                        <label class="" for="25"><span>$</span>25</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="form-footer-content" >
+                        <div class="another-amount">
+                            <input type="number" placeholder="Another Amount" 
+                            onKeyPress="if(this.value.length==4) return false;">
+                            <img src="../../assets/icons/dollar.svg" alt=" Dollar Sign Icon">
+                        </div>
+
+                        <div class="notes" style="display: flex;">
+                            <div style="margin-right: 50px;">
+                                <input type="radio" name="note" id="monthly">
+                                <label for="monthly">Monthly</label>
+                            </div>
+
+                            <div>
+                                <input type="radio" name="note" id="once" checked>
+                                <label for="once">Once</label>
+                            </div>
+                        </div>
+
+                            <button type="submit" class="btn btn-rounded btn-dark">Feed a friend now</button>
+                            <p>Share with your friends on social networks </p>
+                        </div>
+                    </form>
                 </div>
-              </div>
-              <div class="amount-usd">
-                <p class="donation-amount" data-usd="5000">$5000</p>
-                <p class="donation-amount" data-usd="2000">$2000</p>
-                <p class="donation-amount initial" data-usd="1000">$1000</p>
-                <p class="donation-amount" data-usd="500">$500</p>
-                <p class="donation-amount" data-usd="250">$250</p>
-                <p class="donation-amount" data-usd="100">$100</p>
-                <p class="donation-amount" data-usd="50">$50</p>
-                <p class="donation-amount" data-usd="25">$25</p>
-              </div>
-              <form action="#" class="pickfeed-form">
-                <div class="input-box">
-                  <input type="number" name="currency" placeholder="Another amount">
-                  <img src="../../assets/images/usd.png" alt="">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="content1" style="display: flex; justify-content: space-between;">
+                <div class="logo">
+                    <a class="header_logo_link" href="../../index.html">
+                        <div>PetStory online</div>
+                    </a>
                 </div>
-                <div class="radio-input-block">
-                  <div class="radio-input-value">
-                    <input class="radio-selector" type="radio" id="monthly" name="donate" value="monthly"
-                           checked>
-                    <label for="monthly">Monthly</label>
-                  </div>
-                  <div class="radio-input-value">
-                    <input class="radio-selector" type="radio" id="once" name="donate" value="once">
-                    <label for="once">Once</label>
-                  </div>
+                <form>
+                    <h3 class="subtitle">Subscribe to our news</h3>
+                    <input type="email" placeholder="Enter your email" required>
+                    <input type="submit" value="Submit">
+
+                </form>
+            </div>
+            <div class="content2">
+                <button class="btn btn-square btn-dark">
+                    <a href="/">donate for volunteers</a>
+                </button>
+            </div>
+            <div class="content3" style="display: flex; justify-content: space-between;">
+                <div class="socials">
+                    <a href=""><img src="../../assets//icons/facebook.svg" alt="facebook"></a>
+                    <a href=""><img src="../../assets/icons/twitter.svg" alt="twitter"> </a>
+                    <a href=""><img src="../../assets/icons/instagram.svg" alt="instagram"></a>
+                    <a href=""><img src="../../assets/icons/youtube.svg" alt="youtube"></a>
                 </div>
-                <button class="button rounded">Feed a friend now</button>
-                <p>Share with your friends on social networks</p>
-              </form>
-          </div>
-      </section>
-  </main>
-  <footer>
-      <div class="footer-left">
-          <div class="footer-header">
-              <a href="/index.html">
-                  <img src="../../assets/icons/logo_pet.png" alt="PetStory logo" />
-              </a>
-          </div>            
-          <button type="button" class="button" onclick="window.location.href='pages/donate/index.html'">Donate for
-              volunteers</button>
-          <div class="footer-social" id="contacts">
-              <div class="social-content">
-                  <div class="social-icon">
-                      <a href="https://www.facebook.com/" target="_blank"><img src="../../assets/icons/facebook.png"
-                              alt="facebook logo" /></a>
-                  </div>
-                  <h6><a href="https://www.facebook.com/" target="_blank">Facebook</a></h6>
-              </div>
-              <div class="social-content">
-                  <div class="social-icon">
-                      <a href="https://twitter.com/"><img src="../../assets/icons/Twitter.png"
-                              alt="twitter logo" /></a>
-                  </div>
-                  <h6><a href="https://twitter.com/">Twitter</a></h6>
-              </div>
-              <div class="social-content">
-                  <div class="social-icon">
-                      <a href="https://www.instagram.com/"><img src="../../assets/icons/Instagram.png"
-                              alt="instagram logo" /></a>
-                  </div>
-                  <h6><a href="https://www.instagram.com/">Instagram</a></h6>
-              </div>
-              <div class="social-content">
-                  <div class="social-icon">
-                      <a href="https://www.youtube.com/"><img src="../../assets/icons/Youtube.png"
-                              alt="youtube logo" /></a>
-                  </div>
-                  <h6><a href="https://www.youtube.com/">Youtube</a></h6>
-              </div>
-          </div>
-      </div>
-      <div class="footer-center">
-          <nav class="navbar-footer">
-              <ul>
-                  <li>
-                      <a class="nav_link active" data-text="about">About</a>
-                  </li>
-                  <li>
-                      <a href="#" class="nav_link" data-text="map">Map</a>
-                  </li>
-                  <li>
-                      <a href="#" class="nav_link" data-text="zoos">Zoos</a>
-                  </li>
-                  <li>
-                      <a href="#" class="nav_link" data-text="donate">Donate</a>
-                  </li>
-                  <li>
-                      <a href="#contacts" class="nav_link" data-text="contact">Contact
-                          us</a>
-                  </li>
-              </ul>
-          </nav>
-      </div>
-      <div class="footer-right">
-          <form action="#" method="post">
-              <label for="email">Subscribe to our news</label>
-              <input type="email" id="email" name="email" placeholder="Enter your email" pattern="[^ @]*@[^ @]*"
-                  required />
-              <input type="submit" value="Submit" id="submit" />
-          </form>
-          <div class="design-by">
-              <h6>Designed by Alisa Samborskaya</h6>
-              <h6>©RSSchool & ©Yem Digital 2021</h6>
-          </div>
-      </div>
- </footer>
+                <nav>
+                    <ul class="navbar-links">
+                        <li><a class="nav-item" href="../../index.html">About</a></li>
+                        <li><a class="nav-item" href="#">Map</a></li>
+                        <li><a class="nav-item" href="#">Zoos</a></li>
+                        <li><a class="nav-item" href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+                <div class="designed-by">
+                    <p style="margin-bottom: 10px;"><a
+                            href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online?node-id=0%3A1"
+                            target="_blank"> Designed by Alisa Samborskaya</a></p>
+                    <p><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online?node-id=0%3A1"
+                            target="_blank">©RSSchool & ©Yem Digital 2021</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
