create: screen responsive

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="shortcut icon" href="assets/icons/panda_icon.svg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1400px)" href="small_destop.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="tablet.css">
     <title>Online Zoo | Home</title>
 </head>
 
