--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="assets/icons/panda_icon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1400px)" href="small_destop.css">
     <title>Online Zoo | Donate</title>
 </head>
 <body>
