--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="assets/icons/panda_icon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" media="screen and (max-width: 1400px)" href="small_destop.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="tablet.css">
     <title>Online Zoo | Donate</title>
 </head>
 <body>
